# 1c-ai-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  manifest.json  paths.env  pyproject.toml
.github/workflows/: ci.yml  integration.yml
adr/: 0001-language-and-framework.md  0002-monorepo-structure.md  0003-mcp-architecture.md  0004-hierarchical-orchestration.md  0005-tool-groups-registry.md  0006-data-layer.md  0007-pydantic-models.md  0008-paths-protocol.md  0009-pipeline-contracts.md  0010-mcp-tool-contracts.md  0011-tool-groups-registry.md  0012-kb-as-code.md  0013-agent-facade.md  0014-error-taxonomy.md  0015-deployment-strategy.md  0016-final-architecture-decisions.md  0017-vector-store-protocol.md  0018-taskstate-migration-strategy.md  0019-observability-strategy.md  0020-embeddings-strategy.md  README.md
docker/: Dockerfile.app  Dockerfile.bsl-ls  bsl_ls_http_server.py
docker/postgres/: init.sql
docs/architecture/: 00-overview.md  01-monorepo-structure.md  02-pydantic-models.md  03-paths-protocol.md  04-pipeline-contracts.md  05-mcp-tool-contracts.md  06-tool-groups.md  07-kb-as-code.md  08-agent-facade.md  09-error-taxonomy.md  10-prompts-spec.md  CONCEPTUAL.md  INDEX.md  README.md
docs/process/: BACKLOG.md  CURRENT_FOCUS.md  DECISIONS.md  INTERNAL_ROADMAP.md  PROJECT_BOOTSTRAP.md  TESTING_POLICY.md  worklog.md
knowledge-base/: README.md  index.json
knowledge-base/antipatterns/: commit-in-loop.yaml  function-in-where.yaml  hardcoded-predefined.yaml  metadata-on-client.yaml  modal-call-in-client.yaml  point-access-in-loop.yaml  query-in-loop.yaml  select-star.yaml  transaction-without-try.yaml  try-catch-silent.yaml
knowledge-base/patterns/: bsp-value-retrieval.yaml  deferred-modal.yaml  posting-handler.yaml  session-cache.yaml  transaction-wrapper.yaml
knowledge-base/prompts/: coder.system.j2  planner.system.j2  reviewer.system.j2
knowledge-base/schemas/: antipattern.schema.json  code-output.schema.json  pattern.schema.json  review-output.schema.json  standard.schema.json  subtask.schema.json
knowledge-base/standards/: bsp-find-by-code.yaml  bsp-find-by-name.yaml  bsp-message-to-user.yaml  bsp-no-execute-string-literal.yaml  sto-2.1-no-english-markers.yaml  sto-2.1-no-latin-var-decl.yaml  sto-6.1-no-tabs.yaml  (+1 more)
migrations/: README.md
scripts/: check_package_boundaries.py
tests/: conftest.py
(+59 files in other folders)
